# Portfolio

./: README.org
AdventOfCode2019BFS/: Day20.cabal  README.org
AdventOfCode2019CellularAutomaton/: Day24.cabal  README.org
AdventOfCode2019Day20BFS/: Day20.hs  README.org
AdventOfCode2019Day22GroupTheory/: Day22.hs  README.org
AdventOfCode2019Day24CellularAutomaton/: Day24.hs  README.org
TextExcel/: ACell.java  Cell.java  EmptyCell.java  FormulaCell.java  History.java  Location.java  PercentCell.java  README.org  RealCell.java  Spreadsheet.java  TextCell.java  TextExcel.java  ValueCell.java
