cabal-version:       2.4

name:                Day20
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Avi Caspe
maintainer:          avi.caspe@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0,
                       linear,
                       containers,
                       split

  hs-source-dirs:      .
  default-language:    Haskell2010
